Fix issue with super and forwarding arguments in prism_compile.c

Fixes [Bug #20720]